# CameraTrackingCLion

./: CMakeLists.txt  Camera.h  main.cpp  out_camera_data.xml
